# sat_pref_plan

./: .gitignore  datasets.py  main.py  models.py  pyproject.toml  test.py  todo  train_conv_modpatch.py  train_conv_modpyr.py  train_unet_matchpatch.py  train_unet_modpixel.py  util.py
results/conv_modpatch/: 2023-02-08_10:35:46.977106.pt  2023-02-08_10:53:34.435920.pt  2023-02-08_11:32:55.412977.pt  2023-02-08_11:50:32.977745.pt
results/conv_modpyr/: 2023-02-08_11:55:53.741017.pt  2023-02-08_14:07:15.140323.pt
sat_pref_plan/data/: base.py  embedding.py  image_pair.py  matching.py  modified.py  multi_image.py  utils.py
sat_pref_plan/data/_deprecated/: base.py  matching.py  modified.py
sat_pref_plan/models/: convnet.py  unet.py
sat_pref_plan/run/: train_classifier_pyrpatch.py  train_pyrpatch_classifier.py  utils.py
sat_pref_plan/utils/: hashing.py  parallel.py
